[Qt] Focus rings are ugly, rects should be united instead of drawn individually https://bugs.webkit.org/show_bug.cgi?id=49953

Reviewed by Andreas Kling.

WebCore:

Create a QPainterPath and add to it the focus rects, one at a time.
Combine the 2 drawFocusRing functions into one function drawFocusRingForPath.

Tests: fast/css/focus-ring-detached.html
       fast/css/focus-ring-multiline.html

* platform/graphics/qt/GraphicsContextQt.cpp:
(WebCore::drawFocusRingForPath):
(WebCore::GraphicsContext::drawFocusRing):

LayoutTests:

* fast/css/focus-ring-detached.html: Added.
* fast/css/focus-ring-multiline.html: Added.
* platform/mac-snowleopard/fast/css/focus-ring-detached-expected.checksum: Added.
* platform/mac-snowleopard/fast/css/focus-ring-detached-expected.png: Added.
* platform/mac-snowleopard/fast/css/focus-ring-detached-expected.txt: Added.
* platform/mac-snowleopard/fast/css/focus-ring-multiline-expected.checksum: Added.
* platform/mac-snowleopard/fast/css/focus-ring-multiline-expected.png: Added.
* platform/mac-snowleopard/fast/css/focus-ring-multiline-expected.txt: Added.
* platform/qt/fast/css/focus-ring-detached-expected.checksum: Added.
* platform/qt/fast/css/focus-ring-detached-expected.png: Added.
* platform/qt/fast/css/focus-ring-detached-expected.txt: Added.
* platform/qt/fast/css/focus-ring-multiline-expected.checksum: Added.
* platform/qt/fast/css/focus-ring-multiline-expected.png: Added.
* platform/qt/fast/css/focus-ring-multiline-expected.txt: Added.



Canonical link: https://commits.webkit.org/64416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74069 268f45cc-cd09-0410-ab3c-d52691b4dbfc